[tool.poetry]
name = "Fastgen"
version = "0.1.0"
description = ""
authors = ["Anne-Sophie Denommé-Pichon <as.denomme@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.6"
matplotlib = "^3.3.4"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
